--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,22 @@
 </head>
 <body>
 
-<%= yield %>
+  <%  if current_user  %>
+      <%= current_user.username%>
+      <%= button_to "Sign Out", session_url, method: :delete %>
+      <% end %>
+  <br>
+
+
+
+  <% if flash[:errors] %>
+    <% flash[:errors].each do |error| %>
+      <%= error + ". " %>
+    <% end %>
+  <% end %>
+
+  <%= yield %>
+
 
 </body>
 </html>
