--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,6 +21,11 @@
                                        name='user[email]'
                                        value='<%= @user.email %>'>
   </label>
+
+  <label id='label_form' >Birthdate
+    <input id='bday' type='text' name='month' placeholder='MM' >
+    <input id='bday' type='text' name='month' placeholder='DD' >
+    <input id='bday' type='text' name='month' placeholder='YYYY' >
   <br>
 
   <input id='submit_form' type='submit' value='Create Account!'>
