sign in qualities

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1 id='user_entry'>Sign Up!</h1>
+<!-- <h1 id='user_entry'>Sign Up!</h1>
 
 <form action="<%= users_url %>" method="post">
   <input type='hidden'
@@ -21,6 +21,7 @@
                                        name='user[email]'
                                        value='<%= @user.email %>'>
   </label>
+  <br>
 
   <label id='label_form' >Birthdate
     <input id='bday' type='text' name='month' placeholder='MM' >
@@ -30,6 +31,6 @@
 
   <input id='submit_form' type='submit' value='Create Account!'>
 </form>
-
+<br>
 <label id='link_label' >Already have an account?</label>
-<%= link_to "Sign In!", new_session_url, id: "alternate_entry_link" %>
+<%= link_to "Sign In!", new_session_url, id: "alternate_entry_link" %> -->
