--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-  <%  if current_user  %>
-      <%= current_user.username%>
-      <%= button_to "Sign Out", session_url, method: :delete %>
-      <% end %>
+  <% if current_user  %>
+    <%= current_user.username%>
+    <%= button_to "Sign Out", api_session_url, method: :delete %>
+  <% end %>
   <br>
 
 
