--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -464,6 +464,7 @@
 .listy {
   display: inline-block;;
   font-family: 'Signika';
+  font-size: 20px;
   float: left;
   padding: 5px;
   margin-right: 10px;
