--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -420,6 +420,7 @@
   padding: 30px;
   margin: auto;
   margin-top: 20px;
+  margin-bottom: 20px;
   width: 880px;
   background-color: #F3F5F9;
   border-bottom-right-radius: 5px;
@@ -509,7 +510,7 @@
 
 #aboutRight {
   float: right;
-  width: 300px;
+  width: 325px;
 }
 
 #aboutDiv:after {
@@ -581,6 +582,8 @@
 }
 
 /* right about */
+
+/* lookingFor */
 #lookingForDiv {
   border-radius: 5px;
   padding: 12px;
@@ -601,7 +604,6 @@
 }
 
 #LFSpan {
-  /*display: inline;*/
   position: relative;
   left: 6px;
 }
@@ -616,7 +618,127 @@
   margin-left: 15px;
 }
 
+/* myDetails */
 
+#myDetailDiv {
+  border-radius: 5px;
+  padding: 12px;
+  margin-top: 28px;
+}
+
+#myDetailDiv:hover {
+  background-color: white;
+  cursor: pointer;
+}
+
+#myDetailHeader {
+  display: block;
+  font-size: 20px;
+  font-family: 'Signika';
+  font-weight: bold;
+  padding-bottom: 10px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.myDetailText {
+  display: block;
+  font-family: 'Signika';
+  font-size: 15px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.detailKey {
+  display: inline-block;
+  color: #bfbfbf;
+  width: 140px;
+}
+
+/* myDetailModal */
+
+#myDetailModalHeader {
+  border-bottom: 1px solid lightgrey;
+  padding: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#modalHeader {
+  display: inline-block;
+  font-family: 'Signika';
+  font-size: 20px;
+  width: 583px;
+}
+
+#myDetailInnerModalDiv {
+  padding: 30px;
+  padding-left: 30px;
+  font-family: 'Signika';
+  color: #4d4d4d;
+}
+
+#modalClose {
+  display: inline-block;
+  font-family: 'Signika';
+  font-size: 30px;
+  color: grey;
+}
+
+.modalQuestion {
+  display: inline-block;
+  width: 190px;
+  margin-bottom: 30px;
+  /*text-align: right;*/
+}
+
+.modalButton {
+  display: inline-block;
+  margin-left: 10px;
+  padding: 2px 6px;
+  border-radius: 2px;
+  background-color: white;
+  border: 1px solid grey;
+}
+
+.isValue {
+  background-color: #ff8080;
+  color: white;
+  border: 1px solid #ff8080;
+
+
+
+}
+
+
+.ReactModal__Overlay {
+  -webkit-perspective: 600;
+  perspective: 600;
+  opacity: 0;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+  transition: opacity 150ms ease-out;
+}
+
+.ReactModal__Content {
+  -webkit-transform: scale(0.5) rotateX(-30deg);
+}
+
+.ReactModal__Content--after-open {
+  -webkit-transform: scale(1) rotateX(0deg);
+  transition: all 150ms ease-in;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.ReactModal__Content--before-close {
+  -webkit-transform: scale(0.5) rotateX(30deg);
+  transition: all 150ms ease-in;
+}
 
 body {
   background-color: #ff8080;
