--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,16 +83,15 @@
 #pokeCupidHeader {
   display: inline-block;
   font-size: 40px;
-  text-align: center;
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   font-family: Pokemon;
   color: gold;
   letter-spacing: .05em;
-  z-index: 100;
   height: 75px;
   width: 250px;
-  top: -70px;
-  margin-left: 40.5%;
   line-height: 75px;
   text-shadow: -1.5px 0 blue, 0 1.5px blue, 1.5px 0 blue, 0 -1.5px blue;
 }
@@ -445,6 +444,7 @@
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   font-family: 'Signika';
+  color: #333333;
 }
 
 #profileName {
@@ -460,6 +460,7 @@
   list-style: none;
   border-bottom: 1px solid lightgrey;
   clear: both;
+  color: #333333;
 }
 
 .listy {
@@ -499,7 +500,6 @@
   top: 2px;
   height: 15px;
   width: 15px;
-  color: blue;
 }
 
 /* left about */
@@ -533,6 +533,7 @@
 
 .aboutDetailDiv {
   margin-top: 40px;
+  color: #333333;
 }
 
 .displayText {
@@ -588,14 +589,17 @@
   border-radius: 5px;
   padding: 12px;
   margin-top: 28px;
+  color: #333333;
 }
 
 #lookingForDiv:hover {
   background-color: white;
+  cursor: pointer;
 }
 
 #lookingForHeader {
   display: block;
+
   font-size: 20px;
   font-family: 'Signika';
   font-weight: bold;
@@ -618,12 +622,68 @@
   margin-left: 15px;
 }
 
+/* lookingForModal */
+
+.typeQuestion {
+  display: inline-block;
+  width: 240px;
+  margin-bottom: 10px;
+}
+
+.levelInput {
+  display: inline-block;
+  border: 1px solid #cccccc;
+  border-radius: 2px;
+  padding: 4px;
+  width: 25px;
+  text-align: center;
+  margin: 0px 10px;
+}
+
+#levelDash {
+  display: inline-block;
+}
+
+#modalType_buttons button {
+  cursor: pointer;
+  font-family: serif;
+  font-size: 15px;
+  padding: 5px;
+  margin: 1px;
+  display: inline-block;
+  width: 70px;
+  text-align: center;
+  font-family: "Fredoka One";
+  border: 1px solid #001a33;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  text-shadow: -.8px 0 black, 0 .8px black, .8px 0 black, 0 -.8px black;
+}
+
+#modalType_buttons button:hover {
+  color: lightgreen;
+}
+
+#modalType_buttons {
+  position: relative;
+  display: block;
+  width: 504px;
+  margin: auto;
+  top: 1px;
+  border: 10px solid pink;
+  background-color: pink;
+  border-radius: 10px;
+}
+
 /* myDetails */
 
 #myDetailDiv {
   border-radius: 5px;
   padding: 12px;
   margin-top: 28px;
+  color: #333333;
 }
 
 #myDetailDiv:hover {
@@ -669,6 +729,7 @@
   font-family: 'Signika';
   font-size: 20px;
   width: 583px;
+  color: #333333;
 }
 
 #myDetailInnerModalDiv {
@@ -689,7 +750,6 @@
   display: inline-block;
   width: 190px;
   margin-bottom: 30px;
-  /*text-align: right;*/
 }
 
 .modalButton {
