--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,17 +48,29 @@
   display: inline-block;
   padding: 10px;
   color: white;
-  line-height: 55px;
+  /*line-height: 55px;*/
   background-color: #ff3333;
   font-family: "Fredoka One";
+  font-size: 20px;
+  margin: 15px 20px;
   text-shadow: -.8px 0 black, 0 .8px black, .8px 0 black, 0 -.8px black;
+  transition: .7s;
+}
+
+#navBarMessage:hover {
+  background-color: lightblue;
+  transition: .15s;
+  cursor: pointer;
+  /*z-index: 102;*/
 }
 
 #navBarButton {
   padding: 10px;
   color: white;
   z-index: 102;
+  margin: 17px 20px;
   font-family: "Fredoka One";
+  font-size: 20px;
   transition: .7s;
   text-shadow: -.8px 0 black, 0 .8px black, .8px 0 black, 0 -.8px black;
 }
@@ -67,7 +79,26 @@
   background-color: lightblue;
   transition: .15s;
   cursor: pointer;
+  /*z-index: 102;*/
+}
+
+#matchButton {
+  float: right;
+  padding: 10px;
+  color: white;
   z-index: 102;
+  margin: 17px 20px;
+  font-family: "Fredoka One";
+  font-size: 20px;
+  transition: .7s;
+  text-shadow: -.8px 0 black, 0 .8px black, .8px 0 black, 0 -.8px black;
+}
+
+#matchButton:hover {
+  background-color: lightblue;
+  transition: .15s;
+  cursor: pointer;
+  /*z-index: 102;*/
 }
 
  #navBarDiv {
@@ -94,6 +125,10 @@
   width: 250px;
   line-height: 75px;
   text-shadow: -1.5px 0 blue, 0 1.5px blue, 1.5px 0 blue, 0 -1.5px blue;
+}
+
+#pokeCupidHeader:hover {
+  cursor: pointer;
 }
 /* end navBar stuff */
 
@@ -438,7 +473,7 @@
   padding: 10px;
   margin-left: 10px;
   height: auto;
-  top: -70px;
+  top: -80px;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -793,6 +828,12 @@
   transition: all 150ms ease-in;
 }
 
+/*  */
+
+#noPhotos {
+  font-family: 'Signika';
+  margin-top: 20px;
+}
 /* question */
 
 #questionDiv:after {
@@ -824,7 +865,6 @@
 .questionDetailDiv button:hover {
   color: white;
 }
-
 
 #leftQuestion {
   display: inline-block;
@@ -862,7 +902,6 @@
 .questionDetailFalse {
   width: 192px;
   height: 60px;
-  /*padding: inherit 5px;*/
   float: right;
   margin-bottom: 10px;
   background-color: lightgrey;
@@ -886,8 +925,191 @@
   color: white;
   border: 1px solid #ff8080;
   cursor: default;
+}
 
+/* userProfile */
 
+#userInfoPage {
+  height: auto;
+  padding: 30px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 880px;
+  background-color: #F3F5F9;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+#userInfoPage:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+#userProfileInfo {
+  border-bottom: 1px solid #cccccc;
+  color: #333333;
+  padding-bottom: 10px;
+}
+
+#userProfileUsername {
+  display: inline-block;
+  font-family: 'Signika';
+  font-size: 30px;
+}
+
+#userProfileText {
+  display: inline-block;
+  position: relative;
+  top: -80px;
+  padding: 10px;
+}
+
+#userProfileAge {
+  display: inline-block;
+  font-family: 'Signika';
+}
+
+#userTextInfo {
+  float: left;
+  background-color: white;
+  padding: 10px;
+  width: 450px;
+  border-radius: 5px;
+  margin-top: 40px;
+}
+
+.userInfoPrompt {
+  font-family: 'Signika';
+  color: #333333;
+  font-size: 20px;
+  border-bottom: 1px solid lightgrey;
+  padding-bottom: 5px;
+}
+
+.userInfoResponse {
+  font-family: 'Signika';
+  color: #333333;
+  padding: 10px 0px;
+}
+
+#userPersonalityInfo {
+  float: right;
+  background-color: white;
+  width: 350px;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 40px;
+}
+
+#userPersonalityHeader {
+  font-family: 'Signika';
+  color: #333333;
+  font-size: 20px;
+  border-bottom: 1px solid lightgrey;
+  padding-bottom: 5px;
+}
+
+.userPersonalityDetail {
+  font-family: 'Signika';
+  color: #333333;
+  padding: 5px 0px;
+}
+
+/* matchIndex */
+
+#matchIndexDiv {
+  height: auto;
+  padding: 30px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 880px;
+  background-color: #F3F5F9;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+#matchIndexHeader {
+  font-family: 'Signika';
+  color: #333333;
+  text-align: center;
+  font-size: 45px;
+  margin-bottom: 20px;
+}
+
+/* matchIndexItem */
+
+.matchIndexItemDiv {
+  padding: 20px;
+  /*border: 1px solid grey;*/
+  border-radius: 5px;
+  background-color: white;
+  margin-top: 20px;
+}
+
+.matchIndexPic {
+  display: inline-block;
+  height: 110px;
+  width: 110px;
+  border-radius: 110px;
+  margin-top: 5px;
+}
+
+.matchIndexItemUser {
+  width: 300px;
+  margin-left: 30px;
+}
+
+.matchIndexItemName {
+  display: inline-block;
+  font-family: 'Signika';
+  font-size: 30px;
+}
+
+.matchIndexItemInfo {
+  display: inline-block;
+  font-family: 'Signika';
+}
+
+.matchIndexItemUser {
+  display: inline-block;
+  position: relative;
+  top: -17px;
+}
+
+.matchIndexItemPercent {
+  display: inline-block;
+  font-family: 'Signika';
+  font-size: 20px;
+}
+
+.matchIndexItemNav {
+  display: inline-block;
+  /*position: relative;
+  top: -20px;*/
+  float: right;
+  margin-top: 27px;
+  margin-right: 27px;
+}
+
+.matchIndexItemButton {
+  padding: 15px;
+  font-size: 20px;
+  background-color: #7bea7b;
+  border-radius: 5px;
+  font-family: 'Signika';
+  color: white;
+  margin-left: 20px;
+}
+
+.matchIndexItemButton:hover {
+  background-color: #33bbff;
 }
 
 body {
