--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1043,6 +1043,25 @@
   margin-bottom: 20px;
 }
 
+#noMatches {
+  font-family: 'Signika';
+  /*margin-bottom: 0px;*/
+  margin-top: 40px;
+  color: #333333;
+  text-align: center;
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+#cubone {
+  height: 200px;
+  width: 165px;
+  display: block;
+  margin: 0px auto;
+  margin-top: 40px;
+}
+
 /* matchIndexItem */
 
 .matchIndexItemDiv {
