default pics and pic changing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -465,6 +465,10 @@
 
 #profilePic {
   display: inline-block;
+  height: 225px;
+  width: 225px;
+  border: 1px solid lightgrey;
+  background-color: white;
 }
 
 #current_user_info {
