--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,16 @@
   <% end %>
   <%= yield %>
 
+  <script>
+    window.CLOUDINARY = {
+      upload_preset: "lnfcsdmu",
+      cloud_name: "dxclocey3",
+      theme: 'white'
+    };
+  </script>
+
+<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+
 
 </body>
 </html>
